Remove deprecations in test code
* new Long -> Long.valueOf
* newInstance() -> getContructor.newInstance

Closes seeburger-ag/seeburger-vfs2#3